# local-project-template

./: .gitignore  Makefile  README.md  pyproject.toml
models/: cleaner.py  loader.py
notebooks/: Example.ipynb
tests/: test_example.py
